--- a/src/app/pages/admin/admin-page/components/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/admin-page/components/dashboard/dashboard.component.html
@@ -6,14 +6,32 @@
   <div class="section">
     <h3 class="section-title">Overall Inventory</h3>
     <div class="stats-grid">
-      <app-stat-card title="Events" value="14" subtitle="Last 7 days" color="blue"></app-stat-card>
-      <app-stat-card title="Discussions" value="868" subtitle="Last 7 days" color="orange"></app-stat-card>
-      <app-stat-card title="Total Users" value="120" subtitle="Last 7 days" color="purple"></app-stat-card>
+      <app-stat-card
+        title="Events"
+        [value]="totalEvents"
+        subtitle="Last 7 days"
+        color="blue">
+      </app-stat-card>
+
+      <app-stat-card
+        title="Discussions"
+        [value]="totalRooms"
+        subtitle="Last 7 days"
+        color="orange">
+      </app-stat-card>
+
+      <app-stat-card
+        title="Total Users"
+        [value]="totalUsers"
+        subtitle="Last 7 days"
+        color="purple">
+      </app-stat-card>
+
       <app-stat-card
         title="Messages from Users"
-        value="12"
+        [value]="newMessages"
         subtitle="Need to Reply"
-        secondValue="2"
+        [secondValue]="pastMessages"
         secondSubtitle="Past Mess"
         color="red">
       </app-stat-card>
@@ -21,28 +39,35 @@
   </div>
 
   <div class="charts-grid">
+    <!-- Chart: Number of Users -->
     <mat-card class="chart-card">
       <mat-card-header>
         <div class="chart-header">
           <div>
             <mat-card-title>Number of Users</mat-card-title>
-            <p class="big-number">120</p>
-            <p class="subtitle">50 Orders</p>
+            <p class="big-number">{{ totalUsers }}</p>
+            <p class="subtitle">{{ totalOrders }} Orders</p>
           </div>
+
           <mat-form-field appearance="outline">
-            <mat-select [(value)]="selectedTimeFrame">
-              <mat-option *ngFor="let time of timeFrames" [value]="time">
-                {{ time }}
-              </mat-option>
+            <mat-select [(value)]="selectedTimeFrame" (selectionChange)="onTimeFrameChange()">
+              @for (time of timeFrames; track time) {
+                <mat-option [value]="time">{{ time }}</mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
       </mat-card-header>
+
       <mat-card-content>
-        <app-bar-chart></app-bar-chart>
+        <app-bar-chart
+          [chartData]="userChartData"
+          [labels]="userChartLabels">
+        </app-bar-chart>
       </mat-card-content>
     </mat-card>
 
+    <!-- Table: Famous Discussion -->
     <mat-card>
       <mat-card-header>
         <mat-card-title>Famous Discussion</mat-card-title>
