--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -2,6 +2,7 @@
   <div class="toolbar">
     <h2>Room Management</h2>
 
+
     <div class="toolbar-actions">
       <div class="custom-search">
         <mat-icon class="search-icon">search</mat-icon>
@@ -11,6 +12,7 @@
                class="search-input" />
       </div>
 
+
       <button mat-stroked-button color="accent" (click)="openCreateDialog()">
         <mat-icon>add</mat-icon>
         Create Room
@@ -18,7 +20,17 @@
     </div>
   </div>
 
+
+
+
+
+
+
+
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
+
+
+
 
     <!-- Checkbox -->
     <ng-container matColumnDef="select">
@@ -38,6 +50,9 @@
       </td>
     </ng-container>
 
+
+
+
     <!-- Room Image -->
     <ng-container matColumnDef="image">
       <th mat-header-cell *matHeaderCellDef>Room Picture</th>
@@ -46,26 +61,46 @@
       </td>
     </ng-container>
 
+
+
+
+    <!-- Room Name -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef class="col-name">Room Name</th>
-      <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.name, 10) }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="name" class="col-name">Room Name</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.name, 10) }}</td>
     </ng-container>
 
+
+
+
+    <!-- Description -->
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef class="col-description">Description</th>
-      <td mat-cell *matCellDef="let row" class="col-description">{{ truncateText(row.description, 50) }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="description" class="col-description">Description</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.description, 50) }}</td>
     </ng-container>
 
+
+
+
+    <!-- Created At -->
     <ng-container matColumnDef="createdAt">
-      <th mat-header-cell *matHeaderCellDef class="col-date">Created At</th>
-      <td mat-cell *matCellDef="let row" class="col-date">{{ row.createdAt | date:'shortDate' }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="createdAt" class="col-date">Created At</th>
+      <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
     </ng-container>
 
+
+
+
+    <!-- Members -->
     <ng-container matColumnDef="members">
-      <th mat-header-cell *matHeaderCellDef class="col-members">Active Members</th>
-      <td mat-cell *matCellDef="let row" class="col-members">{{ row.members }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="members" class="col-members">Active Members</th>
+      <td mat-cell *matCellDef="let row">{{ row.members }}</td>
     </ng-container>
 
+
+
+
+    <!-- Actions -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let row">
@@ -85,13 +120,20 @@
       </td>
     </ng-container>
 
+
+
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{ 'row-inactive': row.is_hidden }"></tr>
     <tr *ngIf="dataSource.data.length === 0">
       <td colspan="7" class="text-center">No rooms found.</td>
     </tr>
-
   </table>
 
+
+
+
   <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10]"></mat-paginator>
+
+
 </div>
