--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -6,7 +6,7 @@
         <mat-icon class="search-icon">search</mat-icon>
         <input
           type="text"
-          [(ngModel)]="searchTerm"
+          (input)="applyFilter($event)"
           placeholder="Search public content"
           class="search-input"
         />
@@ -19,14 +19,16 @@
     </div>
   </div>
 
-  <table mat-table [dataSource]="filteredData" matSort class="mat-elevation-z1">
-  <!-- Select -->
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
+
+    <!-- Select -->
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox
           (change)="masterToggle()"
           [checked]="isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()"></mat-checkbox>
+          [indeterminate]="selection.hasValue() && !isAllSelected()">
+        </mat-checkbox>
       </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox
@@ -45,39 +47,39 @@
       </td>
     </ng-container>
 
-    <!-- Event Name -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef class="col-name">Event</th>
-      <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.title, 20) }}</td>
+    <!-- Event Title -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="title">Event</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.title, 20) }}</td>
     </ng-container>
 
     <!-- Description -->
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef class="col-description">Description</th>
-      <td mat-cell *matCellDef="let row" class="col-description">{{ truncateText(row.description, 35) }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="description">Description</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.description, 35) }}</td>
     </ng-container>
 
     <!-- Dates -->
     <ng-container matColumnDef="registerStart">
-      <th mat-header-cell *matHeaderCellDef class="col-date">Register Date</th>
-      <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerStart | date:'shortDate' }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="registerStart">Register Start</th>
+      <td mat-cell *matCellDef="let row">{{ row.registerStart | date:'shortDate' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="eventDate">
-      <th mat-header-cell *matHeaderCellDef class="col-date">Event Start</th>
-      <td mat-cell *matCellDef="let row" class="col-date">{{ row.eventDate | date:'shortDate' }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="eventDate">Event Start</th>
+      <td mat-cell *matCellDef="let row">{{ row.eventDate | date:'shortDate' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="registerEnd">
-      <th mat-header-cell *matHeaderCellDef class="col-date">Event End</th>
-      <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerEnd | date:'shortDate' }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="registerEnd">Event End</th>
+      <td mat-cell *matCellDef="let row">{{ row.registerEnd | date:'shortDate' }}</td>
     </ng-container>
 
     <!-- Participants -->
     <ng-container matColumnDef="participants">
-      <th mat-header-cell *matHeaderCellDef class="col-participants">Participants</th>
-      <td mat-cell *matCellDef="let row" class="col-participants">
-        {{ row.current_participants || 0 }} / {{ row.max_participants }}
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="participants">Participants</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.participants }} / {{ row.max_participants }}
       </td>
     </ng-container>
 
@@ -85,7 +87,9 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let row">
-        <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="openEditDialog(row)">
             <mat-icon>edit</mat-icon>
@@ -99,14 +103,13 @@
       </td>
     </ng-container>
 
+    <!-- Table rows -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{ 'row-inactive': row.is_hidden }"></tr>
   </table>
 
   <mat-paginator
-    [length]="dataSource.data.length"
-    [pageSize]="pageSize"
-    [pageSizeOptions]="pageSizeOptions"
-    (page)="onPageChange($event)">
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons>
   </mat-paginator>
 </div>
