--- a/src/app/pages/admin/management-profile/management-profile.component.html
+++ b/src/app/pages/admin/management-profile/management-profile.component.html
@@ -6,16 +6,17 @@
       <div class="custom-search">
         <mat-icon class="search-icon">search</mat-icon>
         <input
+          type="text"
           class="search-input"
-          [(ngModel)]="searchTerm"
           placeholder="Search user..."
-          (input)="updatePaginator()"
+          (input)="applyFilter($event)"
         />
+
       </div>
     </div>
   </div>
 
-  <table mat-table [dataSource]="pagedData" class="mat-elevation-z1" matSort>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox
@@ -33,24 +34,44 @@
       </td>
     </ng-container>
 
+<!--    <ng-container matColumnDef="email">-->
+<!--      <th mat-header-cell *matHeaderCellDef class="col-email">User Email</th>-->
+<!--      <td mat-cell *matCellDef="let row" class="col-email">{{truncateText(row.email, 30)}}</td>-->
+<!--    </ng-container>-->
+
+<!--    <ng-container matColumnDef="name">-->
+<!--      <th mat-header-cell *matHeaderCellDef class="col-name">User Name</th>-->
+<!--      <td mat-cell *matCellDef="let row" class="col-name">{{truncateText(row.name, 30)}}</td>-->
+<!--    </ng-container>-->
+
+<!--    <ng-container matColumnDef="joinedRooms">-->
+<!--      <th mat-header-cell *matHeaderCellDef class="col-joinedRooms">Joined Rooms</th>-->
+<!--      <td mat-cell *matCellDef="let row" class="col-joinedRooms">{{ row.joinedRooms }}</td>-->
+<!--    </ng-container>-->
+
+<!--    <ng-container matColumnDef="events">-->
+<!--      <th mat-header-cell *matHeaderCellDef class="col-events">Events</th>-->
+<!--      <td mat-cell *matCellDef="let row" class="col-events">{{ row.events }}</td>-->
+<!--    </ng-container>-->
+
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef class="col-email">User Email</th>
-      <td mat-cell *matCellDef="let row" class="col-email">{{truncateText(row.email, 30)}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="email">User Email</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.email, 30) }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef class="col-name">User Name</th>
-      <td mat-cell *matCellDef="let row" class="col-name">{{truncateText(row.name, 30)}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="name">User Name</th>
+      <td mat-cell *matCellDef="let row">{{ truncateText(row.name, 30) }}</td>
     </ng-container>
 
     <ng-container matColumnDef="joinedRooms">
-      <th mat-header-cell *matHeaderCellDef class="col-joinedRooms">Joined Rooms</th>
-      <td mat-cell *matCellDef="let row" class="col-joinedRooms">{{ row.joinedRooms }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="joinedRooms">Joined Rooms</th>
+      <td mat-cell *matCellDef="let row">{{ row.joinedRooms }}</td>
     </ng-container>
 
     <ng-container matColumnDef="events">
-      <th mat-header-cell *matHeaderCellDef class="col-events">Events</th>
-      <td mat-cell *matCellDef="let row" class="col-events">{{ row.events }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="events">Events</th>
+      <td mat-cell *matCellDef="let row">{{ row.events }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -68,11 +89,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{ 'row-inactive': row.is_hidden }"></tr>
   </table>
 
-  <mat-paginator
-    [length]="filteredData.length"
-    [pageSize]="pageSize"
-    [pageIndex]="currentPageIndex"
-    [pageSizeOptions]="[5, 10, 25, 50]"
-    (page)="onPageEvent($event)">
-  </mat-paginator>
+  <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
 </div>
