--- a/src/app/pages/admin/admin-page/components/bar-chart/bar-chart.component.html
+++ b/src/app/pages/admin/admin-page/components/bar-chart/bar-chart.component.html
@@ -1,7 +1,8 @@
-<div class="chart-container">
-  <canvas baseChart
-          [data]="barChartData"
-          [options]="barChartOptions"
-          [type]="'bar'">
-  </canvas>
+<div class="chart-wrapper">
+  <canvas
+    baseChart
+    [data]="barChartData"
+    [type]="barChartType"
+    [options]="barChartOptions"
+  ></canvas>
 </div>
