--- a/src/app/components/topbar/topbar.component.css
+++ b/src/app/components/topbar/topbar.component.css
@@ -57,18 +57,6 @@
   background-color: #3d8c68;
 }
 
-/* 🔔 Dot indicator */
-.dot {
-  position: absolute;
-  top: 10px;
-  right: 42px;
-  width: 10px;
-  height: 10px;
-  background-color: red;
-  border-radius: 50%;
-  border: 2px solid white;
-}
-
 /* 📬 Popup Panel */
 .notification-wrapper {
   position: relative;
@@ -211,4 +199,27 @@
 .noti-item:hover .noti-thumbnail button {
   visibility: visible;
   opacity: 1;
+}
+
+.noti-btn {
+  position: relative;
+}
+.noti-badge {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  width: 16px;
+  height: 16px;
+  background-color: #f02849;
+  color: white;
+  font-size: 10px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px white;
+  z-index: 1;
+  line-height: 1;
+  padding: 0;
 }
