update admin page

--- a/src/app/pages/admin/admin-page/components/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/admin-page/components/dashboard/dashboard.component.html
@@ -69,17 +69,17 @@
         <app-bar-chart
           [chartData]="eventChartData"
           [chartLabels]="eventChartLabels"
-          [chartTitle]="'Events Created Over Time'"
+          [chartTitle]="'Events Start Over Time'"
         ></app-bar-chart>
 
 
       </mat-card-content>
     </mat-card>
 
-    <!-- Table: Famous Discussion -->
+    <!-- Table: Famous Events -->
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Famous Discussion</mat-card-title>
+        <mat-card-title>Famous Events</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <app-events-table></app-events-table>
