--- a/src/app/pages/admin/admin-page/components/topbar/topbar.component.html
+++ b/src/app/pages/admin/admin-page/components/topbar/topbar.component.html
@@ -7,13 +7,57 @@
   </div>
 
   <div class="right-section">
+<!--    <div class="notification-wrapper">-->
+<!--      <button mat-icon-button class="notification" (click)="toggleNotifications()">-->
+<!--        <mat-icon>notifications</mat-icon>-->
+<!--      </button>-->
+<!--      @if (hasUnread) {-->
+<!--        <span class="dot"></span>-->
+<!--      }-->
+
+<!--      @if (showNotifications) {-->
+<!--        <div class="notification-popup">-->
+<!--          <div class="noti-header">-->
+<!--            Notifications-->
+<!--            <button mat-button (click)="markAllAsRead()">Mark all as read</button>-->
+<!--          </div>-->
+<!--          <div class="noti-list">-->
+<!--            @if (notifications.length > 0) {-->
+<!--              @for (n of notifications; track n.id) {-->
+<!--                <div class="noti-item">-->
+<!--                  <div class="noti-content">-->
+<!--                    <p class="noti-title">{{ n.title }}</p>-->
+
+<!--                    <div class="noti-thumbnail">-->
+<!--                      <img [src]="n.target_image || 'https://via.placeholder.com/60'" alt="thumbnail" class="noti-img" />-->
+<!--                      <button mat-icon-button color="warn" (click)="deleteNotification(n.id)">-->
+<!--                        <mat-icon>delete</mat-icon>-->
+<!--                      </button>-->
+<!--                    </div>-->
+<!--                    <p class="noti-msg" [innerHTML]="n.message"></p>-->
+<!--                    <p class="noti-time">{{ n.created_at | date:'short' }}</p>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              }-->
+
+<!--            } @else {-->
+<!--              <p class="no-noti-text">You have no notifications.</p>-->
+<!--            }-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      }-->
+<!--    </div>-->
+
     <div class="notification-wrapper">
-      <button mat-icon-button class="notification" (click)="toggleNotifications()">
-        <mat-icon>notifications</mat-icon>
-      </button>
-      @if (hasUnread) {
-        <span class="dot"></span>
-      }
+      <div class="notification-icon-wrapper">
+        <button mat-icon-button class="notification" (click)="toggleNotifications()">
+          <mat-icon>notifications</mat-icon>
+        </button>
+
+        @if (hasUnread) {
+          <span class="noti-badge">{{ getUnreadCount() }}</span>
+        }
+      </div>
 
       @if (showNotifications) {
         <div class="notification-popup">
@@ -27,7 +71,6 @@
                 <div class="noti-item">
                   <div class="noti-content">
                     <p class="noti-title">{{ n.title }}</p>
-
                     <div class="noti-thumbnail">
                       <img [src]="n.target_image || 'https://via.placeholder.com/60'" alt="thumbnail" class="noti-img" />
                       <button mat-icon-button color="warn" (click)="deleteNotification(n.id)">
@@ -39,7 +82,6 @@
                   </div>
                 </div>
               }
-
             } @else {
               <p class="no-noti-text">You have no notifications.</p>
             }
@@ -47,6 +89,7 @@
         </div>
       }
     </div>
+
 
     <div class="avatar" style="cursor: pointer;">
       <img src="/assets/images/avatar.png" alt="User avatar">
